# advent-of-code-2025

./: AGENTS.md  Cargo.toml  LICENSE  README.md  pre-commit
.cargo/: config.toml
.github/workflows/: ci.yml
src/: day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs  utils.rs
