[package]
name = "advent-of-code-2025"
license = "MIT"
readme = "README.md"
version = "0.1.0"
authors = ["Andreas Runfalk <andreas@runfalk.se>"]
edition = "2024"
rust-version = "1.91"
publish = false

# Always optimize builds (we care about speed, not safety)
[profile.dev]
opt-level = 3

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
dedent = "0.1.1"
